--- a/index.html
+++ b/index.html
@@ -5,19 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheet/index.css" />
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
-    <title>Asia Insurance</title>
+    <link
+  rel="stylesheet"
+  href="vendor/swiper/swiper-bundle.min.css"
+/>
+    <title>Wedding</title>
   </head>
   <body>
-    <header id="header"></header>
-    <div class="circle-wrapper">
-      <img
-        class="circle circle--top-right"
-        src="image/home/circle.svg"
-        alt=""
-      />
-    </div>
-
     <section class="content">
       <div class="container">
         <div class="row">
@@ -25,7 +19,6 @@
         </div>
       </div>
     </section>
-    <footer id="footer"></footer>
   </body>
 </html>
 
@@ -36,10 +29,9 @@
   crossorigin="anonymous"
 ></script>
 <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="vendor/slick/slick.min.js"></script>
+<script src="vendor/swiper/swiper-bundle.min.js"></script>
 
 <!-- component js -->
-<script type="text/javascript" src="/script/components/slick.js"></script>
 <script type="text/javascript" src="/script/components/header.js"></script>
 <script type="text/javascript" src="/script/components/footer.js"></script>
 <script type="text/javascript" src="/script/components/form.js"></script>
