--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/wedding/stylesheet/index.css" />
      <!-- <link rel="stylesheet" href="/stylesheet/index.css" /> -->
     <link rel="stylesheet" href="/wedding/vendor/bootstrap/dist/css/bootstrap.min.css" />
-  
+    <link rel="stylesheet" href="/wedding/font/stylesheet.css" />
     <title>Wedding</title>
   </head>
   <body>
