--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../stylesheet/index.css" />
+    <link rel="stylesheet" href="stylesheet/index.css" />
      <!-- <link rel="stylesheet" href="/stylesheet/index.css" /> -->
-    <link rel="stylesheet" href="../vendor/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../font/stylesheet.css" />
+    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="font/stylesheet.css" />
     <!-- local -->
     <title>Wedding</title>
   </head>
@@ -126,18 +126,18 @@
   <footer id="footer"></footer>
 </html>
 
-<script type="text/javascript" src="../vendor/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
 <script
   src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
   integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
   crossorigin="anonymous"
 ></script>
-<script src="../vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- <script src="vendor/swiper/swiper-bundle.min.js"></script> -->
 <script src="https://kit.fontawesome.com/68e6e1d266.js" crossorigin="anonymous"></script>
 
 <!-- component js -->
 <!-- <script type="text/javascript" src="/script/components/swiper.js"></script>
 <script type="text/javascript" src="/script/components/header.js"></script> -->
-<script type="text/javascript" src="../script/components/footer.js"></script>
+<script type="text/javascript" src="script/components/footer.js"></script>
 <!-- <script type="text/javascript" src="/script/components/form.js"></script> -->
