update add gallery and style

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="stylesheet/index.css" />
      <!-- <link rel="stylesheet" href="/stylesheet/index.css" /> -->
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="font/stylesheet.css" />
+    <link rel="stylesheet" href="font/kanit/stylesheet.css" />
+    <link rel="stylesheet" href="font/hurricane/stylesheet.css" />
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+/>
     <!-- local -->
     <title>Wedding</title>
   </head>
@@ -42,11 +47,11 @@
             </div>
           </div>
         </div>
-      </div>     
+      </div>   
       <div class="content__box">
         <div class="container">
-          <div class="row">
-            <div class="col-12">
+          <div class="row justify-content-center">
+            <div class="col-12 col-lg-5">
               <div class="content__wrapper">
                 <div class="content__title">
                   ช่วงเช้า
@@ -86,21 +91,21 @@
       </div>
       <div class="content__box">
         <div class="container">
-          <div class="row">
-            <div class="col-12">
+          <div class="row justify-content-center">
+            <div class="col-12 col-lg-5">
               <div class="content__wrapper">
                 <div class="content__title">
                   ช่วงเย็น
                 </div>
                 <div class="content__body">
                   <div class="content__time">
-                    เวลา 17:30 (ครอบครัว)
+                    เวลา 17:30
                   </div>
                   <div class="content__text">
                     <div class="content__location">
                       สถานที่ : ร้านอาหารนาทอง
                     </div>
-                    - พิธีรับไหว้ พ่อแม่ฝ่ายชายและฝ่ายหญิง
+                    - พิธีการและพิธียกน้ำชา
                   </div>
                   <div class="content__map">
                     <a href="https://www.google.com/maps/dir/13.8624149,100.657402/Nathong+Terrace+Bar+and+Restaurant,+569%2F1+Pracha+Uthit+Rd,+Samsen+Nok,+Huai+Khwang,+Bangkok+10310/@13.8174437,100.6210926,13z/data=!3m1!4b1!4m22!1m11!3m10!1s0x30e29e7a0e526f81:0x29c073946b1d106!2sNathong+Terrace+Bar+and+Restaurant!5m2!4m1!1i2!8m2!3d13.7712158!4d100.5849483!15sChvguKPguYnguLLguJnguJnguLLguJfguK3guIdaHiIc4Lij4LmJ4Liy4LiZIOC4meC4suC4l-C4reC4h5IBEWZhbWlseV9yZXN0YXVyYW504AEA!16s%2Fg%2F1vfzbmmr!4m9!1m1!4e1!1m5!1m1!1s0x30e29e7a0e526f81:0x29c073946b1d106!2m2!1d100.5849483!2d13.7712158!3e9?entry=ttu" class="btn btn-gradient" target="_blank">
@@ -111,7 +116,7 @@
 
                 <div class="content__body">
                   <div class="content__time">
-                    เวลา 18:00 เป็นต้นไป (ครอบครัวและเพื่อน)
+                    เวลา 18:00 เป็นต้นไป
                   </div>
                   <div class="content__text">
                     - รับประทานอาหาร
@@ -121,12 +126,262 @@
             </div>
           </div>
         </div>
-        
       </div>
+      <div class="content__gallery">
+        <div class="content__theme content__theme--1">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-12 col-lg-7">
+                <div class="content__title">
+                  Gallery #1
+                </div>
+                <div class="content__slide">
+                  <div class="swiper swiper--theme-1">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-10.jpg" />
+                      </div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                  </div>
+                  <div class="swiper swiper-nav swiper--theme-1-nav">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-10.jpg" />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>   
+        <div class="content__theme content__theme--2">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-12 col-lg-7">
+                <div class="content__title">
+                  Gallery #2
+                </div>
+                <div class="content__slide">
+                  <div class="swiper swiper--theme-2">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-10.jpg" />
+                      </div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                  </div>
+                  <div class="swiper swiper-nav swiper--theme-2-nav">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-10.jpg" />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>   
+        <div class="content__theme content__theme--3">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-12 col-lg-7">
+                <div class="content__title">
+                  Gallery #3
+                </div>
+                <div class="content__slide">
+                  <div class="swiper swiper--theme-3">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-10.jpg" />
+                      </div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                  </div>
+                  <div class="swiper swiper-nav swiper--theme-3-nav">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-10.jpg" />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> 
+      </div>  
       <div class="content__box">
         <div class="container">
-          <div class="row">
-            <div class="col-12">
+          <div class="row justify-content-center">
+            <div class="col-12 col-lg-5">
               <div class="content__wrapper">
                 <div class="content__title">
                   ขั้นตอนการใส่ซองออนไลน์
@@ -164,8 +419,8 @@
       </div>
       <div class="content__box">
         <div class="container">
-          <div class="row">
-            <div class="col-12">
+          <div class="row justify-content-center">
+            <div class="col-12 col-lg-5">
               <div class="content__wrapper">
                 <div class="content__title">
                   สิ่งที่อยากจะบอก
@@ -196,9 +451,9 @@
 <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- <script src="vendor/swiper/swiper-bundle.min.js"></script> -->
 <script src="https://kit.fontawesome.com/68e6e1d266.js" crossorigin="anonymous"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 <!-- component js -->
-<!-- <script type="text/javascript" src="/script/components/swiper.js"></script>
-<script type="text/javascript" src="/script/components/header.js"></script> -->
+<script type="text/javascript" src="script/components/swiper.js"></script>
+<script type="text/javascript" src="script/components/header.js"></script>
 <script type="text/javascript" src="script/components/footer.js"></script>
 <!-- <script type="text/javascript" src="/script/components/form.js"></script> -->
