--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                   <h2>
                     นายดุลยภัทร รุ่งเรืองระยับกุล 
                   </h2>
-                  <h3>
-                    และ
-                  </h3>
+                  <h2 class="content__and-design"> 
+                   &
+                  </h2>
                   <h2>
                     นางสาวกมลรัตน์ ทรัพย์เสรี
                   </h2>
@@ -47,7 +47,10 @@
             </div>
           </div>
         </div>
-      </div>   
+      </div>  
+      <div class="content__image-wrapper">
+        <img class="content__image" src="image/flower/flower-4.png" alt="">
+      </div> 
       <div class="content__box">
         <div class="container">
           <div class="row justify-content-center">
@@ -68,7 +71,7 @@
                   </div>
                   <div class="content__map">
                     <a target="_blank" href="https://maps.app.goo.gl/hsw1ZAu65FKbuR5R8?g_st=ic" class="btn btn-gradient">
-                      แผนที่ๆจอดรถ กดปุ่มนี้ <i class="far fa-hand-pointer"></i>
+                      แผนที่ๆจอดรถ กดปุ่มนี้ <img class="btn__image" src="image/flower/flower-6.png" alt="">
                     </a>
                   </div>
                 </div>
@@ -87,7 +90,8 @@
               </div> 
             </div>
           </div>
-        </div>       
+        </div> 
+        <img class="content__image-design" src="image/flower/flower-3.png" alt="">      
       </div>
       <div class="content__box">
         <div class="container">
@@ -109,7 +113,7 @@
                   </div>
                   <div class="content__map">
                     <a href="https://www.google.com/maps/dir/13.8624149,100.657402/Nathong+Terrace+Bar+and+Restaurant,+569%2F1+Pracha+Uthit+Rd,+Samsen+Nok,+Huai+Khwang,+Bangkok+10310/@13.8174437,100.6210926,13z/data=!3m1!4b1!4m22!1m11!3m10!1s0x30e29e7a0e526f81:0x29c073946b1d106!2sNathong+Terrace+Bar+and+Restaurant!5m2!4m1!1i2!8m2!3d13.7712158!4d100.5849483!15sChvguKPguYnguLLguJnguJnguLLguJfguK3guIdaHiIc4Lij4LmJ4Liy4LiZIOC4meC4suC4l-C4reC4h5IBEWZhbWlseV9yZXN0YXVyYW504AEA!16s%2Fg%2F1vfzbmmr!4m9!1m1!4e1!1m5!1m1!1s0x30e29e7a0e526f81:0x29c073946b1d106!2m2!1d100.5849483!2d13.7712158!3e9?entry=ttu" class="btn btn-gradient" target="_blank">
-                      แผนที่ร้านอาหารนาทอง กดปุ่มนี้ <i class="far fa-hand-pointer"></i>
+                      แผนที่ร้านอาหารนาทอง กดปุ่มนี้ <img class="btn__image" src="image/flower/flower-6.png" alt="">
                     </a>
                   </div>
                 </div>
@@ -126,6 +130,7 @@
             </div>
           </div>
         </div>
+        <img class="content__image-design-2" src="image/flower/flower-2.png" alt="">      
       </div>
       <div class="content__gallery">
         <div class="content__theme content__theme--1">
@@ -211,7 +216,7 @@
             </div>
           </div>
         </div>   
-        <div class="content__theme content__theme--2">
+        <!-- <div class="content__theme content__theme--2">
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-12 col-lg-7">
@@ -376,7 +381,7 @@
               </div>
             </div>
           </div>
-        </div> 
+        </div>  -->
       </div>  
       <div class="content__box">
         <div class="container">
@@ -408,7 +413,7 @@
                   </div>      
                   <div class="content__map">
                     <a href="https://line.me/ti/p/~gottd" class="btn btn-gradient" target="_blank">
-                      ส่งสลิปยืนยันการใส่ซอง กดปุ่มนี้ <i class="far fa-hand-pointer"></i>
+                      ส่งสลิปยืนยันการใส่ซอง กดปุ่มนี้  <img class="btn__image" src="image/flower/flower-5.png" alt="">
                     </a>
                   </div>
                 </div>
