--- a/index.html
+++ b/index.html
@@ -138,82 +138,42 @@
             <div class="row justify-content-center">
               <div class="col-12 col-lg-7">
                 <div class="content__title">
-                  Gallery #1
+                  Gallery
                 </div>
-                <div class="content__slide">
-                  <div class="swiper swiper--theme-1">
-                    <div class="swiper-wrapper">
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-10.jpg" />
-                      </div>
-                    </div>
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
+                <div class="row no-gutters spotlight-group" data-masonry='{"percentPosition": true }'>
+                  <div class="col-6"> 
+                    <a class="spotlight" href="image/gallery/set-1/1.jpg">
+                      <img class="content__img-manasonry" src="image/gallery/set-1/1.jpg" alt="">
+                    </a>                               
                   </div>
-                  <div class="swiper swiper-nav swiper--theme-1-nav">
-                    <div class="swiper-wrapper">
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-10.jpg" />
-                      </div>
-                    </div>
+                  <div class="col-6"> 
+                    <a class="spotlight" href="image/gallery/set-1/2.jpg">
+                      <img class="content__img-manasonry" src="image/gallery/set-1/2.jpg" loading="lazy" alt="">
+                    </a>                
+                  </div>
+                  <div class="col-6">   
+                    <a class="spotlight" href="image/gallery/set-1/4.jpg">
+                      <img class="content__img-manasonry" src="image/gallery/set-1/4.jpg" loading="lazy" alt="">
+                    </a>             
+                  </div>.
+                  <div class="col-6">
+                    <a class="spotlight" href="image/gallery/set-1/8.jpg">
+                      <img class="content__img-manasonry" src="image/gallery/set-1/8.jpg" loading="lazy" alt="">
+                    </a>                  
+                  </div>
+                  <div class="col-6"> 
+                    <a class="spotlight" href="image/gallery/set-1/7.jpg">
+                      <img class="content__img-manasonry" src="image/gallery/set-1/7.jpg" loading="lazy" alt="">
+                    </a>                 
+                  </div>
+                  <div class="col-6">    
+                    <a class="spotlight" href="image/gallery/set-1/6.jpg">
+                      <img class="content__img-manasonry" src="image/gallery/set-1/6.jpg" loading="lazy" alt="">
+                    </a>               
                   </div>
                 </div>
               </div>
-            </div>
+            </div> 
           </div>
         </div>   
         <!-- <div class="content__theme content__theme--2">
@@ -382,6 +342,7 @@
             </div>
           </div>
         </div>  -->
+        <img class="content__image-design-3" src="image/flower/flower-6.png" alt="">      
       </div>  
       <div class="content__box">
         <div class="container">
@@ -432,7 +393,7 @@
                 </div>
                 <div class="content__body">
                   <div class="content__highlight">
-                    <i class="fas fa-quote-left"></i>
+                   <img class="content__icon" src="image/flower/flower-4.png" alt="">
                     สุดท้ายนี้ เราทั้งคู่ขอขอบคุณอย่างสูงที่มางานของเรา เราอยากจะบอกว่าพวกคุณคือคนสำคัญที่อยู่ในชีวิตของเราเสมอมา และอยากให้อยู่ด้วยกันตลอดไปนะ รักเสมอ <br>
                     จาก ก๊อต และ อุ้ม
                   </div>
@@ -454,6 +415,8 @@
   crossorigin="anonymous"
 ></script>
 <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
+<script src="vendor/spotlight/spotlight.bundle.js"></script>  
 <!-- <script src="vendor/swiper/swiper-bundle.min.js"></script> -->
 <script src="https://kit.fontawesome.com/68e6e1d266.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
