--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
   crossorigin="anonymous"
 ></script>
 <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" async></script>
+<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script src="vendor/spotlight/spotlight.bundle.js"></script>  
 <!-- <script src="vendor/swiper/swiper-bundle.min.js"></script> -->
 <script src="https://kit.fontawesome.com/68e6e1d266.js" crossorigin="anonymous"></script>
