--- a/index.html
+++ b/index.html
@@ -148,27 +148,27 @@
                   </div>
                   <div class="col-6"> 
                     <a class="spotlight" href="image/gallery/set-1/2.jpg">
-                      <img class="content__img-manasonry" src="image/gallery/set-1/2.jpg" loading="lazy" alt="">
+                      <img class="content__img-manasonry" src="image/gallery/set-1/2.jpg" alt="">
                     </a>                
                   </div>
                   <div class="col-6">   
                     <a class="spotlight" href="image/gallery/set-1/4.jpg">
-                      <img class="content__img-manasonry" src="image/gallery/set-1/4.jpg" loading="lazy" alt="">
+                      <img class="content__img-manasonry" src="image/gallery/set-1/4.jpg" alt="">
                     </a>             
                   </div>.
                   <div class="col-6">
                     <a class="spotlight" href="image/gallery/set-1/8.jpg">
-                      <img class="content__img-manasonry" src="image/gallery/set-1/8.jpg" loading="lazy" alt="">
+                      <img class="content__img-manasonry" src="image/gallery/set-1/8.jpg" alt="">
                     </a>                  
                   </div>
                   <div class="col-6"> 
                     <a class="spotlight" href="image/gallery/set-1/7.jpg">
-                      <img class="content__img-manasonry" src="image/gallery/set-1/7.jpg" loading="lazy" alt="">
+                      <img class="content__img-manasonry" src="image/gallery/set-1/7.jpg" alt="">
                     </a>                 
                   </div>
                   <div class="col-6">    
                     <a class="spotlight" href="image/gallery/set-1/6.jpg">
-                      <img class="content__img-manasonry" src="image/gallery/set-1/6.jpg" loading="lazy" alt="">
+                      <img class="content__img-manasonry" src="image/gallery/set-1/6.jpg" alt="">
                     </a>               
                   </div>
                 </div>
