--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="content__box">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-12 col-lg-5">
+            <div class="col-12 col-md-6 col-lg-5">
               <div class="content__wrapper">
                 <div class="content__title">
                   ช่วงเช้า
@@ -104,7 +104,7 @@
       <div class="content__box">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-12 col-lg-5">
+            <div class="col-12 col-md-6 col-lg-5">
               <div class="content__wrapper">
                 <div class="content__title">
                   ช่วงเย็น
@@ -393,7 +393,7 @@
       <div class="content__box">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-12 col-lg-5">
+            <div class="col-12 col-md-6 col-lg-5">
               <div class="content__wrapper">
                 <div class="content__title">
                   ขั้นตอนการใส่ซองออนไลน์
@@ -432,7 +432,7 @@
       <div class="content__box">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-12 col-lg-5">
+            <div class="col-12 col-md-6 col-lg-5">
               <div class="content__wrapper">
                 <div class="content__title">
                   สิ่งที่อยากจะบอก
