--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     - พิธีการและพิธียกน้ำชา
                   </div>
                   <div class="content__map">
-                    <a href="https://www.google.com/maps/dir/13.8624149,100.657402/Nathong+Terrace+Bar+and+Restaurant,+569%2F1+Pracha+Uthit+Rd,+Samsen+Nok,+Huai+Khwang,+Bangkok+10310/@13.8174437,100.6210926,13z/data=!3m1!4b1!4m22!1m11!3m10!1s0x30e29e7a0e526f81:0x29c073946b1d106!2sNathong+Terrace+Bar+and+Restaurant!5m2!4m1!1i2!8m2!3d13.7712158!4d100.5849483!15sChvguKPguYnguLLguJnguJnguLLguJfguK3guIdaHiIc4Lij4LmJ4Liy4LiZIOC4meC4suC4l-C4reC4h5IBEWZhbWlseV9yZXN0YXVyYW504AEA!16s%2Fg%2F1vfzbmmr!4m9!1m1!4e1!1m5!1m1!1s0x30e29e7a0e526f81:0x29c073946b1d106!2m2!1d100.5849483!2d13.7712158!3e9?entry=ttu" class="btn btn-gradient" target="_blank">
+                    <a href="https://maps.app.goo.gl/WdSCmD5JMVEAUVjq9" class="btn btn-gradient" target="_blank">
                       แผนที่ร้านอาหารนาทอง กดปุ่มนี้ <img class="btn__image" src="image/flower/flower-6.png" alt="">
                     </a>
                   </div>
